# rlhf-synth-fixer

./: .babelrc  .buildignore  .cfnlintrc  .cfnlintrc.yaml  .coverage  .coveragerc  .cursorignore  .dockerignore  .editorconfig  .env.deploy  .env.example  .env.pulumi  .env_suffix  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .generation-report.md  .gitattributes  .gitignore  .goignore  .job5-stats.md  .localstack-minimal-bootstrap.sh  .localstackenv  .localstackrc  .npmrc  .phase2-complete  .prettierrc.json  .pylintrc  .releaserc.json  .setup_complete.txt  .task_context.json  .task_handoff.json  .unique_suffix  1  ARCHITECTURE.md  AWS_CREDENTIALS_SETUP.md  AmazonQ.md  BACKEND_STRATEGY.md  BLOCKING_ISSUES.md  (+664 more)
.claude/: csv_safety_guide.md  error-handling.md  lessons_learnt.md  platform_enforcement.md  quick_validation_checklist.md  shared-validations.md  tasks.csv.backup.20251120_200619  validation-checkpoints.md
.gen/: constraints.json
.github/: .ci-trigger  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md
.test_venv/: pyvenv.cfg
__tests__/: index.int.test.ts  index.test.ts  index.unit.test.ts
archive/: README.md
cdk-outputs/: flat-outputs.json
cfn-outputs/: all-outputs.json  flat-outputs.json  outputs.json
cli/: create-ideal-response.ts  create-task.ts  export-pulumi-outputs.py
components/: asg.py  rds.py  vpc.py
config/: dev-config.json
coverage/: clover.xml  cov.json  coverage-summary.json  lcov.info
deployment_outputs/: outputs.json
docker-app/: Dockerfile  index.js
docs/: STACK_NAMING_CONVENTIONS.md  TERRAFORM_CLEANUP.md  terraform-state-management.md
examples/: unique-bucket-naming.md
lambda/: anomaly_detection.py  (+36 more)
lambda-code/: index.js
(+70248 files in other folders)
